--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 	<div id="content">
 		<a name="about"></a>
 		<h1>Hello World!</h1>
-		<p class="large">Hi! I am Nick Kelly, a M.S. student in Computer Architecture and Embedded Systems at the <a href="http://ece.utexas.edu">University of Texas at Austin</a>. Currently, I am interested in parallel and low-energy architectures, micro-architecture, and complication techniques.
+		<p class="large">Hi! I am Nick Kelly, a M.S. student in Computer Architecture and Embedded Systems at the <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>. Currently, I am interested in parallel and low-energy architectures, micro-architecture, and complication techniques.
 		</p>
 
 		<p class="large">I recently graduated from <a href="http://eecs.oregonstate.edu">Oregon State University</a> with a B.S. in Electrical and Computer Engineering in June 2013. During my final year, I focused on topics relating to computer engineering and analog/circuit design.
@@ -34,6 +34,10 @@
 
 		<p class="large">Additionally, I done much work in web development, spanning multiple languages, frameworks, and devices. Please see my <a href="https://drive.google.com/file/d/0BxJOoRyWgGKQbXdWS3VZS1BjYVE/edit?usp=sharing">resume</a> and <a href="projects.htm">projects</a> for more information.
 		</p>
+		<ul class="social">
+			<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
+			<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
+		</ul>
 	</div>
 </div>
 </body>
