Removed steps link

--- a/projects.htm
+++ b/projects.htm
@@ -44,9 +44,9 @@ $(function() {
 		<a href="papers/EE382V_Final_Report.pdf"><img class="project" src="images/projects/sdf.png"/></a>
 		<p>We present a method of optimizing both energy and latency of a Synchronous Dataflow model (SDF) using genetic algorithm (GA) assisted list scheduling. Our solution is fully automatic requiring only the SDF definition, processor specifications, and communication bus specifications. Using these parameters, latency and energy are accurately modeled taking into account dynamic energy, static energy, and DVFS overhead. Actor firings are then optimized for minimal latency and energy using SPEA2, a multi-objective GA. The resulting schedule defines the overall timing schedule, DVFS schedule, and processor mapping. In initial tests, energy-optimized schedules can consume up to 38.5% less energy, with a minimal effect on latency. Our final system is fully configurable and versatile, working on SDFs (for DSP applications) and task graphs (for general applications).</p>
 
-		<h3>A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing (OSU Senior Capstone)</h3>
+		<h3>A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing (OSU Senior Capstone, submitted to EMBC '14)</h3>
 		<h4>Energy harvesting, Embedded development, C++/Qt</h4>
-		<a href="papers/STEPS.pdf"><img class="project" src="images/projects/steps.png"/></a>
+		<a href="#"><img class="project" src="images/projects/steps.png"/></a>
 		<p>This paper provides an energy-harvesting, shoe- mounted system for medical sensing using piezoelectric trans- ducers for generating power. The electronics are integrated inside a conventional consumer shoe, measuring the pressure of the wearer's foot exerted on the sole at six locations. The electronics are completely powered by the harvested energy from walking or running, generating 10-20 uJ of energy per step that is then consumed by capturing and storing the force sensor data. The overall shoe system demonstrates that wearable sensor electronics can be adequately powered through piezoelectric energy-harvesting.</p>
 
 		<h3>Various (OSU and UT)</h3>
