--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
 		<p class="large">I recently graduated from <a href="http://eecs.oregonstate.edu">Oregon State University</a> with a B.S. in Electrical and Computer Engineering in June 2013. During my final year, I focused on topics relating to computer engineering and analog/circuit design.
 		</p>
 
-		<p class="large">Additionally, I done much work in web development, spanning multiple languages, frameworks, and devices. Please see my <a href="https://drive.google.com/file/d/0BxJOoRyWgGKQbXdWS3VZS1BjYVE/edit?usp=sharing">resume</a> and <a href="projects.htm">projects</a> for more information.
+		<p class="large">Additionally, I have done a lot work in web development&mdash;spanning multiple languages, frameworks, and devices. Please see my <a href="https://drive.google.com/file/d/0BxJOoRyWgGKQbXdWS3VZS1BjYVE/edit?usp=sharing">resume</a> and <a href="projects.htm">projects</a> for more information.
 		</p>
 		<ul class="social">
 			<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
