Modified piezo project

--- a/projects.htm
+++ b/projects.htm
@@ -1,5 +1,4 @@
-<
-tml>
+<html>
 <head>
 <title>Nick Kelly - Projects</title>
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
