--- a/publications/index.html
+++ b/publications/index.html
@@ -4,4 +4,4 @@ layout: default
 ---
 <h1>Publications</h1>
 <h2>Electrical Engineering</h2>
-<p>Meier, R.; Kelly, N.; Almog, O.; Chiang, P., "A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing" Engineering in Medicine and Biology Society (EMBC), 2014 36th Annual International Conference of the IEEE , vol., no., pp.x August 2014. <a href="#">Paper</a> <a href="/papers/steps_poster.pdf">Poster</a></p>
+<p>Meier, R.; Kelly, N.; Almog, O.; Chiang, P., "A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing," <i>Engineering in Medicine and Biology Society (EMBC), 2014 36th Annual International Conference of the IEEE</i> , pp.622,625,26-30 August 2014. <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6943668&isnumber=6943513">Paper</a> <a href="/papers/steps_poster.pdf">Poster</a></p>
