--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@ layout: default
 
 <h3>A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing (OSU Senior Capstone, accepted to EMBC '14)</h3>
 <h4>Energy harvesting, Embedded development, C++/Qt</h4>
-<a href="#"><img class="project" src="/images/projects/steps.png"/></a>
+<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6943668&isnumber=6943513"><img class="project" src="/images/projects/steps.png"/></a>
 <p>This paper provides an energy-harvesting, shoe- mounted system for medical sensing using piezoelectric trans- ducers for generating power. The electronics are integrated inside a conventional consumer shoe, measuring the pressure of the wearer's foot exerted on the sole at six locations. The electronics are completely powered by the harvested energy from walking or running, generating 10-20 uJ of energy per step that is then consumed by capturing and storing the force sensor data. The overall shoe system demonstrates that wearable sensor electronics can be adequately powered through piezoelectric energy-harvesting.</p>
 
 <h3>Miscellaneous (OSU and UT)</h3>
