--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ title: Nick Kelly
 layout: default
 ---
 <h1>Hello World!</h1>
-<p class="large">Hi! I am Nick Kelly, a M.S. student in Computer Architecture and Embedded Systems at the <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>. Currently, I am interested in parallel and low-energy architectures, micro-architecture, and complication techniques.
+<p class="large">Hi! I am Nick Kelly, a M.S. student in Computer Architecture and Embedded Systems at the <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>. Currently, I am interested in parallel and low-energy architectures, micro-architecture, graphics, and compilation techniques.
 </p>
 
-<p class="large">I recently graduated from <a href="http://eecs.oregonstate.edu">Oregon State University</a> with a B.S. in Electrical and Computer Engineering in June 2013. During my final year, I focused on topics relating to computer engineering and analog/circuit design.
+<p class="large">I graduated from <a href="http://eecs.oregonstate.edu">Oregon State University</a> with a B.S. in Electrical and Computer Engineering in June 2013. During my final year, I focused on topics relating to computer engineering and analog/circuit design.
 </p>
 
 <p class="large">Additionally, I have done a lot work in web development&mdash;spanning multiple languages, frameworks, and devices. Please see my <a href="/papers/resume.pdf">resume</a>, <a href="/projects">projects</a>, and <a href="/publications">publications</a> for more information.
