--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <h3>Realtime GPU Raytracing</h3>
 <h4>Graphics, CUDA C/C++, OpenGL</h4>
-<a href="/papers/raytracing.pdf"><img class="project" src="/images/projects/raytracing.png"/></a>
+<a href="/papers/raytracer.pdf"><img class="project" src="/images/projects/raytracer.png"/></a>
 <p>In this paper, we aim to explore current methods for realtime raytracing and attempt to elaborate upon them in order to produce a near realtime implementation. Additionally, while some prior work only implement partial features (e.g. only primary and shadow rays), we aim to support primary and all secondary (refraction, reflection, light/shadow) rays as well as arbitrary triangle meshes and textures. We decided to implement the final raytracer in CUDA due to the availability of NVIDIA hardware and their toolset.
 </p>
 
