--- a/contact/index.html
+++ b/contact/index.html
@@ -5,5 +5,6 @@ layout: default
 <h1>Contact</h1>
 <a name="contact"></a>
 <p class="large">
-You can contact me at the email listed in my <a href="https://drive.google.com/file/d/0BxJOoRyWgGKQbXdWS3VZS1BjYVE/edit?usp=sharing">resume</a>.
+You can contact me at the email listed in my <a href="/papers/resume.pdf">resume</a> or through my 
+<a href="http://www.linkedin.com/in/nickelly">LinkedIn</a>.
 </p>
