Updated front page and added uarch

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@ layout: default
 ---
 <h1>Hello World!</h1>
 <p class="large">
-Hi! I am Nick Kelly, a M.S. student in Computer Architecture and Embedded Systems at the <a
-	href="http://www.ece.utexas.edu">University of Texas at Austin</a> graduating in May, 2016.
-Currently, I work on error modeling and injection in <a href="https://lph.ece.utexas.edu">LPH</a>,
-led by <a href="https://lph.ece.utexas.edu/merez/MattanErez/Home">Mattan Erez</a>.
-In general, I am interested in low-energy and resilient architectures, micro-architecture, graphics,
-and compilation techniques. 
+Hi, I am Nick Kelly! I currently work at Intel in Hillsboro as a CPU architect doing performance
+modeling.  In general, I am interested in low-energy and resilient architectures,
+micro-architecture, graphics, and compilation techniques. Unprofessionally, I enjoy rock climbing,
+running, drawing, and anything outdoor related.
 </p>
 
 <p class="large">
-I graduated from <a href="http://eecs.oregonstate.edu">Oregon State University</a> with a B.S. in
-Electrical and Computer Engineering in June 2013. During my final year, I focused on topics relating
-to computer engineering and analog/circuit design.
+Recently, I graduated from <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>
+with a M.S. in Computer Architecture and Embedded Systems (May 2016). While there, I worked on error
+modeling and injection in <a href="https://lph.ece.utexas.edu">LPH</a>, led by <a
+href="https://lph.ece.utexas.edu/merez/MattanErez/Home">Mattan Erez</a>.  I did my undergraduate 
+studies at <a href="http://eecs.oregonstate.edu">Oregon State University</a> in Electrical 
+and Computer Engineering (June 2013). During my final year, I focused
+on topics relating to computer engineering and analog/circuit design.
 </p>
 
 <p class="large">
