--- a/publications/index.html
+++ b/publications/index.html
@@ -3,5 +3,9 @@ title: Publications - Nick Kelly
 layout: default
 ---
 <h1>Publications</h1>
+<h2>Computer Architecture</h2>
+<p>Chang, C.; Lym, S.; Kelly, N.; Sullivan, M. B.; Erez, M., "Hamartia: A Fast and Accurate Error Injection Framework," Workshop on Silicon Errors in Logic–System Effects (SELSE). Boston, MA. April, 2018.</p>
+<p>Chang, C.; Lym, S.; Kelly, N.; Sullivan, M. B.; Erez, M., "Evaluating and Accelerating High-Fidelity Error Injection for HPC," In Proceedings of The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC). Dallas, TX. November, 2018.</p>
+
 <h2>Electrical Engineering</h2>
 <p>Meier, R.; Kelly, N.; Almog, O.; Chiang, P., "A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing," <i>Engineering in Medicine and Biology Society (EMBC), 2014 36th Annual International Conference of the IEEE</i> , pp.622,625,26-30 August 2014. <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6943668&isnumber=6943513">Paper</a> <a href="/papers/steps_poster.pdf">Poster</a></p>
