Update resume, add additional

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,11 @@ layout: default
 <h1>Contact</h1>
 <a name="contact"></a>
 <p class="large">
-You can contact me at the email listed in my <a href="/papers/resume.pdf">resume</a> or through my 
-<a href="http://www.linkedin.com/in/nickelly">LinkedIn</a>.
+You can contact me through my <a href="http://www.linkedin.com/in/nickelly">LinkedIn</a>
+or at the email listed in my resumes:
+<ul>
+	<li><a href="/papers/arch_resume.pdf">Computer architecture resume</a></li>
+	<li><a href="/papers/web_resume.pdf">Web development resume</a></li>
+	<li><a href="/papers/full_resume.pdf">Full resume</a></li>
+</ul>
 </p>
