--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ running, drawing, and anything outdoor related.
 </p>
 
 <p class="large">
-Recently, I graduated from <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>
+I graduated from <a href="http://www.ece.utexas.edu">University of Texas at Austin</a>
 with a M.S. in Computer Architecture and Embedded Systems (May 2016). While there, I worked on error
 modeling and injection in <a href="https://lph.ece.utexas.edu">LPH</a>, led by <a
 href="https://lph.ece.utexas.edu/merez/MattanErez/Home">Mattan Erez</a>.  I did my undergraduate 
@@ -22,8 +22,13 @@ on topics relating to computer engineering and analog/circuit design.
 
 <p class="large">
 Additionally, I have done a lot work in web development&mdash;spanning multiple languages,
-frameworks, and devices. Please see my <a href="/papers/resume.pdf">resume</a>, <a
-href="/projects">projects</a>, and <a href="/publications">publications</a> for more information.
+frameworks, and devices. Please see my resumes:
+<ul>
+	<li><a href="/papers/arch_resume.pdf">Computer architecture resume</a></li>
+	<li><a href="/papers/web_resume.pdf">Web development resume</a></li>
+	<li><a href="/papers/full_resume.pdf">Full resume</a></li>
+</ul>
+As well as <a href="/projects">projects</a>, and <a href="/publications">publications</a> for more information.
 </p>
 <ul class="social">
 	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
