Adjust styles, change fonts to Lato

--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@ on topics relating to computer engineering and analog/circuit design.
 
 <p class="large">
 Additionally, I have done a lot work in web development&mdash;spanning multiple languages,
-frameworks, and devices. Please see my resumes:
-<ul>
+frameworks, and devices. Have a look a my resumes for more information:
+</p>
+
+<ul class="large">
 	<li><a href="/papers/arch_resume.pdf">Computer architecture resume</a></li>
 	<li><a href="/papers/web_resume.pdf">Web development resume</a></li>
 	<li><a href="/papers/full_resume.pdf">Full resume</a></li>
 </ul>
+
 As well as <a href="/projects">projects</a>, and <a href="/publications">publications</a> for more information.
-</p>
+<p class="large">
 <ul class="social">
 	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
 	<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
 </ul>
+</p>
+
