--- a/contact/index.html
+++ b/contact/index.html
@@ -7,9 +7,9 @@ layout: default
 <p class="large">
 You can contact me through my <a href="http://www.linkedin.com/in/nickelly">LinkedIn</a>
 or at the email listed in my resumes:
-<ul>
+</p>
+<ul class="social">
 	<li><a href="/papers/arch_resume.pdf">Computer architecture resume</a></li>
 	<li><a href="/papers/web_resume.pdf">Web development resume</a></li>
 	<li><a href="/papers/full_resume.pdf">Full resume</a></li>
 </ul>
-</p>
