Change font to OpenSans, tweak styles

--- a/contact/index.html
+++ b/contact/index.html
@@ -8,8 +8,15 @@ layout: default
 You can contact me through my <a href="http://www.linkedin.com/in/nickelly">LinkedIn</a>
 or at the email listed in my resumes:
 </p>
-<ul class="social">
+<ul class="large">
 	<li><a href="/papers/arch_resume.pdf">Computer architecture resume</a></li>
 	<li><a href="/papers/web_resume.pdf">Web development resume</a></li>
 	<li><a href="/papers/full_resume.pdf">Full resume</a></li>
 </ul>
+
+<p class="large">
+<ul class="social">
+	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
+	<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
+</ul>
+</p>
