--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@ or at the email listed in my resumes:
 
 <p class="large">
 <ul class="social">
-	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
-	<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
+	<li><a href="http://github.com/skimmmer"><img src="../images/github.png"/></a></li>
+	<li><a href="http://www.linkedin.com/in/nickelly"><img src="../images/linkedin.png"/></a></li>
 </ul>
 </p>
