Couple edits to main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 Hi, I am Nick Kelly! I currently work at Intel in Hillsboro as a CPU architect doing performance
 modeling.  In general, I am interested in low-energy and resilient architectures,
 micro-architecture, graphics, and compilation techniques. Unprofessionally, I enjoy rock climbing,
-running, drawing, and anything outdoor related.
+running, drawing, and almost anything outdoor related.
 </p>
 
 <p class="large">
@@ -22,7 +22,8 @@ on topics relating to computer engineering and analog/circuit design.
 
 <p class="large">
 Additionally, I have done a lot work in web development&mdash;spanning multiple languages,
-frameworks, and devices. Have a look a my resumes for more information:
+frameworks, and devices. Feel free to take a look at my resumes for past experience and skills:
+and skills:
 </p>
 
 <ul class="large">
@@ -32,7 +33,7 @@ frameworks, and devices. Have a look a my resumes for more information:
 </ul>
 
 <p class="large">
-As well as <a href="/projects">projects</a>, and <a href="/publications">publications</a> for more information.
+As well as past <a href="/projects">projects</a> and <a href="/publications">publications</a> for more information.
 <ul class="social">
 	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
 	<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
