--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ frameworks, and devices. Feel free to take a look at my resumes for past experie
 <p class="large">
 As well as past <a href="/projects">projects</a> and <a href="/publications">publications</a> for more information.
 <ul class="social">
-	<li><a href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
+	<li><a title="Personal GitHub" href="http://github.com/skimmmer"><img src="images/github.png"/></a></li>
+	<li><a title="Work GitHub" href="http://github.com/nicholas-kelly"><img src="images/github.png"/></a></li>
 	<li><a href="http://www.linkedin.com/in/nickelly"><img src="images/linkedin.png"/></a></li>
 </ul>
 </p>
