Update main page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 ---
 <h1>Hello World!</h1>
 <p class="large">
-Hi, I am Nick Kelly! I currently work at Intel in Hillsboro as a CPU architect doing performance
-modeling.  In general, I am interested in low-energy and resilient architectures,
+Hi, I am Nick Kelly! I currently work at Ampere Computing in Portland, OR as a CPU architect doing performance
+modeling. Previously at Intel in Hillsboro, OR. In general, I am interested in low-energy and resilient architectures,
 micro-architecture, graphics, and compilation techniques. Unprofessionally, I enjoy rock climbing,
 running, drawing, and almost anything outdoor related.
 </p>
